fix startpage on safari

--- a/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/millerntor.less
+++ b/typo3conf/ext/vca_millerntor_theme/Resources/Private/Less/Theme/millerntor.less
@@ -206,6 +206,10 @@
     	margin: 0px;
     	font-size: 13px;
     	
+    	li {
+    		width: 100%;
+    	}
+    	
     	> li > a {
     		color: #fff;
     		text-transform: uppercase;
@@ -441,7 +445,7 @@ a.sb.gray:hover, .sb.gray a, a.sb.gray:after, .sb.gray a:after {
 }
 
 /**** Isotope CSS3 transitions ****/
-
+/*
 .isotope,
 .isotope .isotope-item {
 	.transition-duration(0.8s);
@@ -456,7 +460,7 @@ a.sb.gray:hover, .sb.gray a, a.sb.gray:after, .sb.gray a:after {
 	-webkit-transition-property: transform, opacity;
           transition-property: transform, opacity;
 }
-
+*/
 /**** disabling Isotope CSS3 transitions ****/
 
 .isotope.no-transition,
