--- a/typo3conf/ext/vca_millerntor_theme/Resources/Public/Css/application.css
+++ b/typo3conf/ext/vca_millerntor_theme/Resources/Public/Css/application.css
@@ -5633,6 +5633,9 @@ button.close {
   margin: 0px;
   font-size: 13px;
 }
+.navbar-main .dropdown-menu li {
+  width: 100%;
+}
 .navbar-main .dropdown-menu > li > a {
   color: #fff;
   text-transform: uppercase;
@@ -5838,19 +5841,22 @@ a.sb.gray:after,
   z-index: 1;
 }
 /**** Isotope CSS3 transitions ****/
+/*
 .isotope,
 .isotope .isotope-item {
-  -webkit-transition-duration: 0.8s;
-  transition-duration: 0.8s;
+	.transition-duration(0.8s);
 }
+
 .isotope {
-  -webkit-transition-property: height, width;
-  transition-property: height, width;
+	-webkit-transition-property: height, width;
+          transition-property: height, width;
 }
+
 .isotope .isotope-item {
-  -webkit-transition-property: transform, opacity;
-  transition-property: transform, opacity;
+	-webkit-transition-property: transform, opacity;
+          transition-property: transform, opacity;
 }
+*/
 /**** disabling Isotope CSS3 transitions ****/
 .isotope.no-transition,
 .isotope.no-transition .isotope-item,
